test/negative/type_mismatch.mut
# Negative: assign i64 to str variable
x: str = 42
